<resources>
    <string name="app_name">admin</string>
    <string name="vehiculos">VEHICULOS</string>
    <string name="perfil">Perfil</string>
    <string name="informacion">INFORMACION</string>
    <string name="desde">Desde</string>
    <string name="hasta">Hasta</string>
    <string name="buscar">Buscar</string>
    <string name="nombre">Nombre:</string>
    <string name="email">Email</string>
    <string name="Contrasena_antig">Contraseña Antigua</string>
    <string name="Contrasena_Nuev">Contraseña Nueva</string>
    <string name="Telefono">Telefono</string>
    <string name="Nacimiento">Nacimiento</string>
    <string name="metodo_pago">Metodo de pago</string>
    <string name="edit">Editar</string>



</resources>
