<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="391dp"
        android:layout_marginLeft="10dp"
        android:layout_height="42dp"
        android:text="@string/nombre"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="389dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="389dp"
        android:layout_height="38dp"
        android:layout_marginLeft="10dp"
        android:text="@string/email"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="391dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="10dp"
        android:inputType="text" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="180dp"
            android:layout_height="38dp"
            android:layout_marginLeft="8dp"
            android:gravity="center"
            android:text="@string/Contrasena_antig"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="206dp"
            android:layout_height="38dp"
            android:gravity="center"
            android:text="@string/Contrasena_Nuev"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editText"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:inputType="text" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtTelefono"
            android:layout_width="180dp"
            android:layout_height="38dp"
            android:layout_marginLeft="8dp"
            android:gravity="center"
            android:text="@string/Telefono"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtNacimiento"
            android:layout_width="206dp"
            android:layout_height="38dp"
            android:gravity="center"
            android:text="@string/Nacimiento"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/IdTelefono"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:inputType="number" />

        <EditText
            android:id="@+id/IdNacimiento"
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />



    </LinearLayout>


    <TextView
        android:id="@+id/textView6"
        android:layout_width="214dp"
        android:layout_height="36dp"
        android:text="@string/metodo_pago"
        android:layout_marginLeft="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp">


        <ImageButton
            android:id="@+id/imageButton"
            android:layout_marginLeft="10dp"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="Master Card ending **00 "
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="102dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="300dp"
            android:text="@string/edit" />


    </RelativeLayout>

    <EditText
        android:id="@+id/editText5"
        android:layout_width="389dp"
        android:layout_marginLeft="10dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />



    <Button
        android:id="@+id/button3"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="Guardar" />


</LinearLayout>